fix citations overflowing the page in some conditions

--- a/src/main-scss/chat.scss
+++ b/src/main-scss/chat.scss
@@ -619,7 +619,6 @@ code {
 .citation {
 	border-left: medium solid $citation-border-color;
 	padding-left: 5px;
-	display: inline-block;
 	background: $citation-background;
 	min-width: 70%;
 }
